Revert "upgrade libzkp to v0.11.0rc2 (#773)"
This reverts commit 522882c4cdc8c90484ce40d4f62ab6d1ab73bbf5.

--- a/.github/workflows/l2geth_ci.yml
+++ b/.github/workflows/l2geth_ci.yml
@@ -46,6 +46,7 @@ jobs:
       run: |
         make libzkp
         sudo cp ./rollup/circuitcapacitychecker/libzkp/libzkp.so /usr/local/lib/
+        sudo cp ./rollup/circuitcapacitychecker/libzkp/libzktrie.so /usr/local/lib/
         make geth
   check:
     if: github.event.pull_request.draft == false
