--- a/Dockerfile.mockccc.alpine
+++ b/Dockerfile.mockccc.alpine
@@ -8,6 +8,8 @@ FROM golang:1.20-alpine as builder
 
 RUN apk add --no-cache gcc musl-dev linux-headers git
 
+ENV CGO_LDFLAGS="-ldl"
+
 ADD . /go-ethereum
 RUN cd /go-ethereum && go run build/ci.go install ./cmd/geth
 
@@ -15,6 +17,9 @@ RUN cd /go-ethereum && go run build/ci.go install ./cmd/geth
 FROM alpine:latest
 
 RUN apk add --no-cache ca-certificates
+
+ENV CGO_LDFLAGS="-ldl"
+
 COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
 
 EXPOSE 8545 8546 30303 30303/udp
