--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -7,10 +7,8 @@ ARG SCROLL_LIB_PATH=/scroll/lib
 # Build Geth in a stock Go builder container
 FROM scrolltech/go-rust-builder:go-1.20-rust-nightly-2022-12-10 as builder
 
-RUN apt-get update && apt-get install -y build-essential
-
 ADD . /go-ethereum
-RUN cd /go-ethereum && CGO_LDFLAGS="-ldl" env GO111MODULE=on go run build/ci.go install ./cmd/geth
+RUN cd /go-ethereum && env GO111MODULE=on go run build/ci.go install ./cmd/geth
 
 # Pull Geth into a second stage deploy alpine container
 FROM ubuntu:20.04
