--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, X64]
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -23,6 +23,7 @@ jobs:
     - name: Build docker image
       uses: docker/build-push-action@v2
       with:
+        platforms: linux/amd64,linux/arm64
         context: .
         file: Dockerfile
         # push: ${{ startsWith(github.ref, 'refs/tags/') }}
