--- a/.github/workflows/docker_latest.yaml
+++ b/.github/workflows/docker_latest.yaml
@@ -1,9 +1,8 @@
 name: Docker
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [published]
 
 jobs:
   build-and-push:
@@ -27,6 +26,6 @@ jobs:
         file: Dockerfile
         # push: ${{ startsWith(github.ref, 'refs/tags/') }}
         push: true
-        tags: scrolltech/l2geth:${{github.ref_name}}
+        tags: scrolltech/l2geth:latest
         # cache-from: type=gha,scope=${{ github.workflow }}
         # cache-to: type=gha,scope=${{ github.workflow }}
