--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -37,8 +37,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - name: Install Docker
+        run: |
+          brew update
+          brew install --cask docker
+          open /Applications/Docker.app
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
@@ -49,7 +52,6 @@ jobs:
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/arm64
           context: .
           file: Dockerfile
           # push: ${{ startsWith(github.ref, 'refs/tags/') }}
