--- a/.github/workflows/docker-arm64.yaml
+++ b/.github/workflows/docker-arm64.yaml
@@ -1,38 +1,10 @@
 name: Docker
 
 on:
-  push:
-    tags:
-      - '*'
+  workflow_dispatch: {}
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build docker image
-      uses: docker/build-push-action@v2
-      with:
-        platforms: linux/amd64
-        context: .
-        file: Dockerfile
-        # push: ${{ startsWith(github.ref, 'refs/tags/') }}
-        push: true
-        tags: scrolltech/l2geth:${{github.ref_name}}-amd64
-        # cache-from: type=gha,scope=${{ github.workflow }}
-        # cache-to: type=gha,scope=${{ github.workflow }}
-
-  build-and-push-arm64-ubuntu-runner:
+  build-and-push-arm64-image:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -51,7 +23,6 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
