--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -23,45 +23,10 @@ jobs:
     - name: Build docker image
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
         context: .
         file: Dockerfile
         # push: ${{ startsWith(github.ref, 'refs/tags/') }}
         push: true
-        tags: scrolltech/l2geth:${{github.ref_name}}-amd64
+        tags: scrolltech/l2geth:${{github.ref_name}}
         # cache-from: type=gha,scope=${{ github.workflow }}
         # cache-to: type=gha,scope=${{ github.workflow }}
-
-  build-and-push-arm64-ubuntu-runner:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch:
-          - amd64
-          - aarch64
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up QEMU
-        if: matrix.arch == 'aarch64'
-        run: |
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-          docker buildx create --name multiarch --driver docker-container --use
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build docker image
-        uses: docker/build-push-action@v2
-        with:
-          platforms: linux/arm64
-          context: .
-          file: Dockerfile
-          push: true
-          tags: scrolltech/l2geth:${{github.ref_name}}-arm64-ubuntu
