Install ca-certificates as otherwise cert verification fails when connecting to L1 RPC

--- a/Dockerfile.mockccc
+++ b/Dockerfile.mockccc
@@ -15,6 +15,9 @@ RUN cd /go-ethereum && env GO111MODULE=on go run build/ci.go install ./cmd/geth
 # Pull Geth into a second stage deploy alpine container
 FROM ubuntu:20.04
 
+RUN apt-get -qq update \
+    && apt-get -qq install -y --no-install-recommends ca-certificates
+
 ENV CGO_LDFLAGS="-ldl"
 
 COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
