--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,6 +6,7 @@ on:
       - '*'
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   build-and-push:
@@ -23,7 +24,7 @@ jobs:
       with:
         images: scrolltech/l2geth
         tags: |
-          type=semver,pattern={{version}},enable=${{ github.event_name == 'push' }}
+          type=semver,pattern={{version}},enable=${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
           type=raw,value=latest,enable=${{ github.event_name == 'release' }}
     - name: Login to Docker Hub
       uses: docker/login-action@v2
