--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,7 +6,6 @@ on:
       - '*'
   release:
     types: [published]
-  workflow_dispatch:
 
 jobs:
   build-and-push:
@@ -24,8 +23,10 @@ jobs:
       with:
         images: scrolltech/l2geth
         tags: |
-          type=semver,pattern={{version}},enable=${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+          type=ref,event=tag,enable=${{ github.event_name == 'push' }}
           type=raw,value=latest,enable=${{ github.event_name == 'release' }}
+        flavor: |
+          latest=false
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
