--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - '*'
+  release:
+    types: [published]
 
 jobs:
   build-and-push:
@@ -15,6 +17,16 @@ jobs:
       uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+    - name: Extract docker metadata
+      id: meta
+      uses: docker/metadata-action@v3
+      with:
+        images: scrolltech/l2geth
+        tags: |
+          type=ref,event=tag,enable=${{ github.event_name == 'push' }}
+          type=raw,value=latest,enable=${{ github.event_name == 'release' }}
+        flavor: |
+          latest=false
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -27,6 +39,7 @@ jobs:
         file: Dockerfile
         # push: ${{ startsWith(github.ref, 'refs/tags/') }}
         push: true
-        tags: scrolltech/l2geth:${{github.ref_name}}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         # cache-from: type=gha,scope=${{ github.workflow }}
         # cache-to: type=gha,scope=${{ github.workflow }}
