--- a/rollup/circuitcapacitychecker/libzkp/Cargo.toml
+++ b/rollup/circuitcapacitychecker/libzkp/Cargo.toml
@@ -33,7 +33,7 @@ log = "0.4"
 once_cell = "1.19"
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0.66"
+serde_json = { version = "1.0.66", features = ["unbounded_depth"] }
 
 [profile.test]
 opt-level = 3
